--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
-lib_deps = miguelbalboa/MFRC522@^1.4.11
+lib_deps = 
+	miguelbalboa/MFRC522@^1.4.11
+	arduino-libraries/Servo@^1.2.2
